# coreVM

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  corevm_bytecode_schema.json
benchmarks/: CMakeLists.txt  include.mk  main.cc
benchmarks/micro/: allocators_benchmark.cc  complex_native_type_benchmark.cc  control_instrs_benchmark.cc  frame_benchmark.cc  function_instrs_benchmark.cc  instr_benchmarks_fixture.cc  instr_benchmarks_fixture.h  native_array_instrs_benchmark.cc  native_array_interfaces_benchmark.cc  native_map_instrs_benchmark.cc  native_map_interfaces_benchmark.cc  native_string_instrs_benchmark.cc  native_string_interfaces_benchmark.cc  native_type_arithmetic_instrs_benchmark.cc  native_type_benchmark.cc  native_type_conversion_instrs_benchmark.cc  native_type_creation_instrs_benchmark.cc  native_type_manipulation_instrs_benchmark.cc  ntvhndl_arithmetic_instrs_benchmark.cc  ntvhndl_benchmark.cc  ntvhndl_conversion_instrs_benchmark.cc  ntvhndl_creation_instrs_benchmark.cc  ntvhndl_manipulation_instrs_benchmark.cc  object_container_benchmark.cc  object_instrs_benchmark.cc  process_benchmark.cc  runtime_utils_benchmark.cc  variant_benchmark.cc
src/: CMakeLists.txt  Makefile  include.mk  main.cc
src/api/: README.md  configuration.cc  configuration.h  entry.cc  entry.h
src/corevm/: corevm_bytecode_schema.h  errors.cc  errors.h  llvm_smallvector.h  logging.cc  logging.h  macros.h  main.cc  program.cc  program.h  version.h
src/dyobj/: common.h  dynamic_object.h  dynamic_object_heap.h  dynamic_object_manager.cc  dynamic_object_manager.h  dyobj_id.cc  dyobj_id.h  dyobj_id_helper.cc  errors.h  flags.cc  flags.h  heap_allocator.h  util.cc  util.h
src/frontend/: binary_bytecode_loader.cc  binary_bytecode_loader.h  bytecode_loader.cc  bytecode_loader.h  bytecode_loader_binary.cc  bytecode_loader_binary.h  bytecode_loader_text.cc  bytecode_loader_text.h  bytecode_loader_v0_1.cc  bytecode_loader_v0_1.h  bytecode_runner.cc  configuration.cc  configuration.h  errors.h  loader.cc  program.cc  program.h  runner.cc  runner.h  schema_repository.cc  signal_vector_loader.cc  signal_vector_loader.h  utils.cc  utils.h
src/gc/: garbage_collection_scheme.cc  garbage_collection_scheme.h  garbage_collector.h  mark_and_sweep_garbage_collection_scheme.cc  mark_and_sweep_garbage_collection_scheme.h  refcount_gc_scheme.cc  refcount_gc_scheme.h  reference_count_garbage_collection_scheme.cc  reference_count_garbage_collection_scheme.h
src/ir/: README.md  format.h  format_util.cc  format_util.h  fwd.h  ir_lexer.ll  ir_module_index.cc  ir_module_index.h  ir_parser.tab.cc  ir_parser.tab.hh  ir_parser.yy  ir_parser_driver.cc  ir_parser_driver.h  lex.yy.cc  lex.yy.hh  location.hh  reader.cc  reader.h  sample_ir.txt  verifier.cc  verifier.h
src/jit/: README.md  analysis_pass.cc  analysis_pass.h  analysis_result.cc  analysis_result.h  constant_folding_pass.cc  constant_folding_pass.h  cse_pass.cc  cse_pass.h  jit_compiler.h  jit_compiler_backend.cc  jit_compiler_backend.h  jit_compiler_llvmmcjit_backend.cc  jit_compiler_llvmmcjit_backend.h  jit_scheme_llvmmcjit.h  lowering_pass_target_llvm_ir.cc  lowering_pass_target_llvm_ir.h  pass.cc  pass.h  pass_manager.cc  pass_manager.h  runtime_value.h  transform_pass.cc  transform_pass.h  verification_pass.cc  verification_pass.h
src/memory/: allocation_policy.h  allocation_scheme.cc  allocation_scheme.h  allocator.h  block_allocator.h  errors.h  object_container.h  sequential_allocation_scheme.cc  sequential_allocation_scheme.h
src/runtime/: catch_site.h  closure.cc  closure.h  closure_ctx.h  common.h  compartment.cc  compartment.h  compartment_printer.cc  compartment_printer.h  dbgmem_printer.cc  dbgmem_printer.h  dbgvar_printer.cc  dbgvar_printer.h  debug_opts.h  errors.h  frame.cc  frame.h  frame_cache.cc  frame_cache.h  frame_printer.cc  frame_printer.h  frame_ptr_cache.cc  frame_ptr_cache.h  fwd.h  gc_rule.cc  gc_rule.h  instr.cc  instr.h  instr_fwd.h  instr_info.cc  instr_info.h  instr_printer.cc  instr_printer.h  invocation_ctx.cc  invocation_ctx.h  linear_map.h  loc_info.h  lru_cache.h  measurement.h  native_types_pool.cc  (+18 more)
src/types/: errors.h  fwd.h  interfaces.cc  interfaces.h  native_array.cc  native_array.h  native_map.cc  native_map.h  native_string.cc  native_string.h  native_type_handle.h  native_type_value.h  operator.cc  operators.base.h  operators.binary.h  operators.complex.h  operators.h  operators.unary.h  types.cc  types.h  visitors.h  visitors.impl.h
tests/: CMakeLists.txt  Makefile  include.mk  test_helper.h
tests/dyobj/: Makefile  dynamic_object_container_unittest.cc  dynamic_object_heap_unittest.cc  dynamic_object_unittest.cc  dyobj_heap_alloc_policy_unittest.cc  dyobj_heap_allocator_unittest.cc  heap_alloc_policy_unittest.cc  heap_allocator_unittest.cc
tests/frontend/: bytecode_loader_text_unittest.cc  bytecode_loader_unittest.cc  bytecode_loader_unittest.h  bytecode_loader_unittest_base.cc  bytecode_loader_unittest_base.h  bytecode_loader_v0_1_unittest.cc  bytecode_runner_unittest.cc  configuration_unittest.cc  loader_unittest.cc  program_unittest.cc  runner_unittest.cc  schema_repository_unittest.cc  signal_vector_loader_unittest.cc  utils_unittest.cc
tests/gc/: Makefile  garbage_collection_unittest.cc  mark_and_sweep_garbage_collection_scheme_unittest.cc
tests/ir/: ir_module_index_unittest.cc  ir_parser_driver_unittest.cc  verifier_unittest.cc
tests/jit/: jit_compiler_unittest.cc  pass_manager_unittest.cc
tests/memory/: Makefile  alloc_policy_unittest.cc  allocation_policy_unittest.cc  allocator_unittest.cc  block_allocator_unittest.cc  heap_mem_allocator_unittest.cc  object_container_unittest.cc
tests/runtime/: compartment_unittest.cc  frame_unittest.cc  instr_info_unittest.cc  instr_unittest.cc  instrs_unittest.cc  invocation_ctx_unittest.cc  (+4 more)
tools/: CMakeLists.txt  Makefile  diff_benchmarks.py  extract_info.cc  extract_instr_info.cc  extract_metadata.cc  ir_asm.cc  ir_dis.cc  ir_gen.py  ir_parser_driver.cc  ir_stats.cc  ir_tools_integrity.py  ir_validator.py
(+205 files in other folders)
